[TASK] Solve handle margin problem with extra margin
Original-Commit-Hash: a54b32f70ffb6d34e598e10d80833198210606b7

--- a/TYPO3.Neos/Resources/Public/StyleSheet/style.css
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/style.css
@@ -915,3 +915,19 @@ div.aloha-block-active:hover > div.aloha-block-inner {
 .aloha-block.aloha-block-TYPO3Block ::-moz-selection {
   background: #2F7ECC;
   color: #ffffff; }
+
+.aloha-block-TYPO3Block {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  -moz-transition-property: margin-top margin-bottom;
+  -webkit-transition-property: margin-top margin-bottom;
+  -o-transition-property: margin-top margin-bottom;
+  transition-property: margin-top margin-bottom;
+  -moz-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+.t3-ui-previewmode-activating .aloha-block-TYPO3Block {
+  margin: 0; }
+
